--- a/application-product-dev.yml
+++ b/application-product-dev.yml
@@ -3,3 +3,11 @@ server:
 spring:
   application:
     name: GOFISHING-PRODUCT
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql:///gofishing?serverTimezone=GMT%2B8
+    username: root
+    password: 1997
+
+mybatis-plus:
+  mapper-locations: classpath*:cn/itsource/product/service/mapper/*Mapper.xml
