--- a/application-product-dev.yml
+++ b/application-product-dev.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: GOFISHING-PRODUCT
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql:///gofishing?serverTimezone=GMT%2B8
     username: root
     password: 1997
