--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -9,4 +9,7 @@ zuul:
     plat:
       serviceId: GOFISHING-PLAT
       path: /plat/**
+    product:
+      serviceId: GOFISHING-PRODUCT
+      path: /product/**
   prefix: /services
