添加common网关访问路径配置

--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -12,4 +12,7 @@ zuul:
     product:
       serviceId: GOFISHING-PRODUCT
       path: /product/**
+    common:
+      serviceId: GOFISHING-COMMON
+      path: /common/**
   prefix: /services
