超时时间的修改

--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -16,7 +16,7 @@ zuul:
       serviceId: GOFISHING-COMMON
       path: /common/**
   prefix: /services
-
+#zuul超时时间的设置
 hystrix:
   command:
     default:
